# tramogi

./: .clang-format  .clangd  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  build.py  build.sh  conanfile.txt  prepare-builder.sh  prepare.py
include/: macros.h
include/tramogi/core/: errors.h  file.h  image_data.h  model.h  obj_loader.h
include/tramogi/core/logging/: logging.h
include/tramogi/graphics/: buffer.h  texture.h
include/tramogi/graphics/imgui/: imgui_loader.h
include/tramogi/input/: keyboard.h
include/tramogi/platform/: window.h
scripts/: build.py  builder.py  container_flow.py  prepare.py  utils.py  vars.py
src/: CMakeLists.txt  logging.h  main.cpp
src/core/: CMakeLists.txt  file.cpp  input.cpp  model.cpp  stb_wrapper.cpp  tinyobj_wrapper.cpp
src/core/io/: CMakeLists.txt  file.cpp  model.cpp  stb_wrapper.cpp
src/core/logging/: CMakeLists.txt  logging.cpp
src/graphics/: CMakeLists.txt  allocator.cpp  allocator.h  buffer.cpp  command_buffer.cpp  command_buffer.h  device.cpp  device.h  dispatch_loader.cpp  dispatch_loader.h  instance.cpp  instance.h  physical_device.cpp  physical_device.h  surface.cpp  surface.h  texture.cpp
src/graphics/imgui/: CMakeLists.txt  imgui_loader.cpp
src/input/: CMakeLists.txt  keyboard.cpp
src/platform/: CMakeLists.txt  glfw_window.cpp
src/shaders/: shader.slang
